--- a/po/no/kiconedit.po
+++ b/po/no/kiconedit.po
@@ -1,17 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
+# Norwegian translations for KDE Graphics/kiconedit
 # Copyright (C) 1998 Free Software Foundation, Inc.
 # Hans Petter Bieker <zerium@webindex.no>, 1998.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: KDE GRAPHICS/kiconedit\n"
 "POT-Creation-Date: 1998-08-20 12:43+0200\n"
 "PO-Revision-Date: 1998-08-02 14:15+0200\n"
 "Last-Translator:  Hans Petter Bieker <zerium@webindex.no>\n"
 "Language-Team: no <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO_8859-1\n"
-"Content-Transfer-Encoding: ISO_8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: utils.cpp:57
 #, c-format
@@ -211,7 +211,7 @@ msgstr "&Verktøy"
 
 #: kiconedit.cpp:509
 msgid "&Configure"
-msgstr ""
+msgstr "&Konfigurer"
 
 #: kiconedit.cpp:511
 msgid "Toggle &Grid"
@@ -243,7 +243,7 @@ msgstr "&Hjelp"
 
 #: kiconedit.cpp:579
 msgid "What is ...?"
-msgstr ""
+msgstr "Hva er ...?"
 
 #: kiconedit.cpp:588
 #, fuzzy
