--- a/po/no/kpaint.po
+++ b/po/no/kpaint.po
@@ -1,17 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
+# Norwegian translations for KDE Graphics
 # Copyright (C) 1998 Free Software Foundation, Inc.
 # Hans Petter Bieker <zerium@webindex.no>, 1998.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: KDE GRAPHICS/kpaint\n"
 "POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-04-13 17:48+0100\n"
-"Last-Translator: Svein Olav Aasen <svein.aasen@caa.no / soaasen@online.no\n"
+"Last-Translator: Hans Petter Bieker zzerium@webindex.no\n"
 "Language-Team: no <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO_8859-1\n"
-"Content-Transfer-Encoding: ISO_8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: app.cpp:45
 msgid ""
@@ -268,7 +268,7 @@ msgstr "Billedhøyde:"
 
 #: infodialog.cpp:94 palettedialog.cpp:14
 msgid "Dismiss"
-msgstr ""
+msgstr "Forkast"
 
 #: palette.cpp:100
 msgid "Edit Colour"
