some more updates

--- a/po/de/kpaint.po
+++ b/po/de/kpaint.po
@@ -268,7 +268,7 @@ msgstr "Bildhöhe:"
 
 #: infodialog.cpp:94 palettedialog.cpp:14
 msgid "Dismiss"
-msgstr ""
+msgstr "Schliessen"
 
 #: palette.cpp:100
 msgid "Edit Colour"
