--- a/po/no/kdvi.po
+++ b/po/no/kdvi.po
@@ -1,16 +1,17 @@
+# Norwegian translations for KDE Graphics/kdvi
 # Copyright (C) 1998 Free Software Foundation, Inc.
 # Hans Petter Bieker <zerium@webindex.no>, 1998.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: KDE GRAPHICS/kdvi\n"
 "POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-03-17 HO:MI+ZONE\n"
-"Last-Translator: Svein Olav Aasen <svein.aasen@caa.no / soaasen@online.no>\n"
-"Language-Team: no<LL@li.org>\n"
+"Last-Translator: Hans Petter Bieker <zerium@webindex.no>\n"
+"Language-Team: no <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO_8859-1\n"
-"Content-Transfer-Encoding: ISO_8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: dviwin.cpp:216 dviwin.cpp:232 dviwin.cpp:246 dviwin.cpp:283 dviwin.cpp:300
 #: kdvi.cpp:516
