--- a/po/no/kfax.po
+++ b/po/no/kfax.po
@@ -1,17 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
+# Norwegian translations for KDE GRAPHICS/kfax
 # Copyright (C) 1998 Free Software Foundation, Inc.
 # Hans Petter Bieker <zerium@webindex.no>, 1998.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: KDE GRAPHICS/kfax\n"
 "POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-05-09 23:43+0200\n"
 "Last-Translator: Hans Petter Bieker <zerium@webindex.no>\n"
 "Language-Team: no <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO_8859-1\n"
-"Content-Transfer-Encoding: ISO_8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: kfax.cpp:233 kfax.cpp:828
 msgid "Show &Tool Bar"
