--- a/po/no/kpaint.po
+++ b/po/no/kpaint.po
@@ -1,4 +1,4 @@
-# Norwegian translations for KDE Graphics
+# Norwegian translations for KDE Graphics/kpaint
 # Copyright (C) 1998 Free Software Foundation, Inc.
 # Hans Petter Bieker <zerium@webindex.no>, 1998.
 #
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: KDE GRAPHICS/kpaint\n"
 "POT-Creation-Date: 1998-10-01 13:38+0200\n"
 "PO-Revision-Date: 1998-04-13 17:48+0100\n"
-"Last-Translator: Hans Petter Bieker zzerium@webindex.no\n"
+"Last-Translator: Hans Petter Bieker <zerium@webindex.no>\n"
 "Language-Team: no <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO_8859-1\n"
