--- a/po/no/kview.po
+++ b/po/no/kview.po
@@ -11,7 +11,7 @@ msgstr ""
 "Language-Team: no <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO_8859-1\n"
-"Content-Transfer-Encoding: ISO_8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: wview.cpp:81
 msgid "&Image"
