Some new strings.

--- a/po/no/kiconedit.po
+++ b/po/no/kiconedit.po
@@ -421,6 +421,10 @@ msgid ""
 "Here you can build a palette of custom colors.\n"
 "Just double-click on a box to edit the color"
 msgstr ""
+"Egendefinerte farger\n"
+"\n"
+"Her kan du bygge et palett med egendefinerte farger.\n"
+"Bare dobbelklikk på en boks for å redigere farger"
 
 #: kiconedit.cpp:769
 msgid ""
@@ -428,6 +432,9 @@ msgid ""
 "\n"
 "Create a new icon either from a template or by specifying the size"
 msgstr ""
+"Ny\n"
+"\n"
+"Opprette et nytt ikon enten for en mal eller ved å oppgi størrelsen"
 
 #: kiconedit.cpp:772
 msgid ""
@@ -435,6 +442,9 @@ msgid ""
 "\n"
 "Open an existing icon"
 msgstr ""
+"Åpne\n"
+"\n"
+"Åpne et eksisterende ikon"
 
 #: kiconedit.cpp:775
 msgid ""
@@ -442,6 +452,9 @@ msgid ""
 "\n"
 "Save the current icon"
 msgstr ""
+"Lagre\n"
+"\n"
+"Lagre gjeldende ikon"
 
 #: kiconedit.cpp:778
 msgid ""
@@ -450,6 +463,10 @@ msgid ""
 "Opens a print dialog to let you print the current icon. (Doesn't realy work "
 "as expected"
 msgstr ""
+"Utskrift\n"
+"\n"
+"Åpne en utskriftsdialog for å skrive ut gjeldende ikon. (Fungerer "
+"egentlig ikke som forventet"
 
 #: kiconedit.cpp:782
 msgid ""
@@ -459,6 +476,11 @@ msgid ""
 "\n"
 "(Tip: You can make both rectangular and circular selections)"
 msgstr ""
+"Klipp\n"
+"\n"
+"Klipp gjeldende seksjon ut av ikonet\n"
+"\n"
+"(Tips: Du kan merke både rektangulære og sirkulære seksjoner)"
 
 #: kiconedit.cpp:786
 msgid ""
@@ -468,6 +490,11 @@ msgid ""
 "\n"
 "(Tip: You can make both rectangular and circular selections)"
 msgstr ""
+"Kopier\n"
+"\n"
+"Kopiere gjeldende seksjon ut av ikonet\n"
+"\n"
+"(Tips: Du man merke både rektangulære og sirkulære seksjoner)"
 
 #: kiconedit.cpp:790
 msgid ""
@@ -478,6 +505,12 @@ msgid ""
 "If the contents is larger than the current icon you can paste it in a new "
 "window."
 msgstr ""
+"Lim inn\n"
+"\n"
+"Paste the contents of the clipboard into the current icon.\n"
+"\n"
+"Hvis innholdet er større enn gjeldende ikon kan du lime det inn i ett "
+"nytt vindu."
 
 #: kiconedit.cpp:795
 msgid ""
@@ -487,6 +520,11 @@ msgid ""
 "\n"
 "(Tip: You can make both rectangular and circular selections)"
 msgstr ""
+"Velg\n"
+"\n"
+"Velg en seksjon av ikonet med musen.\n"
+"\n"
+"(Tips: Du man merke både rektangulære og sirkulære seksjoner)"
 
 #: kiconedit.cpp:799
 msgid ""
@@ -520,6 +558,12 @@ msgid ""
 "\n"
 "(Tip: Hold the button down for a few seconds to zoom to a predefined scale"
 msgstr ""
+"Forstørre\n"
+"\n"
+"Forstørre med en.\n"
+"\n"
+"(Tips: Hold knappen nede for et par sekunder for å forstørre med en "
+"forhåndsdefinert skala"
 
 #: kiconedit.cpp:814
 msgid ""
@@ -527,6 +571,9 @@ msgid ""
 "\n"
 "Toggles the grid in the icon edit grid on/off"
 msgstr ""
+"Slå av/på grind\n"
+"\n"
+"Slår grinden i ikonredigeringen av/på"
 
 #: kiconedit.cpp:817
 msgid ""
@@ -534,6 +581,9 @@ msgid ""
 "\n"
 "Opens a new Icon Editor window."
 msgstr ""
+"Nytt vindu\n"
+"\n"
+"Åpne et nytt ikonredigeringsvindu."
 
 #: kiconedit.cpp:820
 msgid ""
@@ -541,6 +591,9 @@ msgid ""
 "\n"
 "Well since you're reading this I guess you found out ;-)"
 msgstr ""
+"Hva er...?\n"
+"\n"
+"Vel siden du leser dette regner jeg med at du fant det ut ;-)"
 
 #: kiconedit.cpp:823
 msgid ""
@@ -559,6 +612,9 @@ msgid ""
 "\n"
 "Draw non-linear lines"
 msgstr ""
+"Frihånd\n"
+"\n"
+"Tegn ikkelinjære linjer"
 
 #: kiconedit.cpp:834
 msgid ""
