Some danish translations

--- a/po/da/kiconedit.po
+++ b/po/da/kiconedit.po
@@ -370,6 +370,9 @@ msgid ""
 "\n"
 "This is a visual represantation of the current cursor position"
 msgstr ""
+"Linealer\n"
+"\n"
+"Linealerne viser den aktuelle markørposition"
 
 #: kiconedit.cpp:748
 msgid ""
@@ -384,6 +387,16 @@ msgid ""
 "\t- Number of colors\n"
 "\t- Application messages"
 msgstr ""
+"Statusbjælken\n"
+"\n"
+"Statusbjælken viser information om det aktuelle ikons status. "
+"Felterne er:\n"
+"\n"
+"\t- Markør position\n"
+"\t- Størrelse\n"
+"\t- Zoom faktor\n"
+"\t- Antal farver\n"
+"\t- Applikations beskeder"
 
 #: kiconedit.cpp:757
 msgid ""
@@ -391,6 +404,9 @@ msgid ""
 "\n"
 "This is a 1:1 preview of the current icon"
 msgstr ""
+"Preview\n"
+"\n"
+"Dette er et 1:1 preview af det aktuelle ikon"
 
 #: kiconedit.cpp:760
 msgid ""
@@ -398,6 +414,9 @@ msgid ""
 "\n"
 "Here you can select colors from the KDE Icon Palette."
 msgstr ""
+"System farver\n"
+"\n"
+"Her kan du vælge farver fra KDE Ikon Paletten."
 
 #: kiconedit.cpp:763
 msgid ""
@@ -406,6 +425,10 @@ msgid ""
 "Here you can build a palette of custom colors.\n"
 "Just double-click on a box to edit the color"
 msgstr ""
+"Andre farver\n"
+"\n"
+"Her kan du bygge en palette af selvdefinerede farver.\n"
+"Bare dobbel-klik på en boks for at redigere farven"
 
 #: kiconedit.cpp:769
 msgid ""
@@ -413,6 +436,9 @@ msgid ""
 "\n"
 "Create a new icon either from a template or by specifying the size"
 msgstr ""
+"Ny\n"
+"\n"
+"Opret et nyt ikon enten fra skabelon eller ved at specificere størrelsen"
 
 #: kiconedit.cpp:772
 msgid ""
@@ -420,6 +446,9 @@ msgid ""
 "\n"
 "Open an existing icon"
 msgstr ""
+"Åben\n"
+"\n"
+"Åben et eksisterende ikon"
 
 #: kiconedit.cpp:775
 msgid ""
@@ -427,6 +456,9 @@ msgid ""
 "\n"
 "Save the current icon"
 msgstr ""
+"Gem\n"
+"\n"
+"Gem det aktuelle ikon"
 
 #: kiconedit.cpp:778
 msgid ""
