--- a/kiconedit/Attic/NEWS
+++ b/kiconedit/Attic/NEWS
@@ -4,6 +4,7 @@ _______________
 ------------------------------------------------------------------------------
    News and fixes in version 0.4.0:
 ------------------------------------------------------------------------------
+ - Added drop site indication when using XDND.
  - Added QWhatsThis help (this is great!).
  - Started playing with XDND. The toolbar now has a drag source and the grid
    supports both XDND and KNDN.
