--- a/po/hr/kpaint.po
+++ b/po/hr/kpaint.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: 1998-04-29 20:00-0500\n"
 "Last-Translator: Vladimir Vuksan <vuksan@veus.hr>\n"
 "Language-Team: Croatian\n"
@@ -303,6 +303,10 @@ msgstr "Pode¹avanja ispunjenja"
 msgid "Fill Pattern:"
 msgstr "Uzorak ispunjenja"
 
+#: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
+msgid "None"
+msgstr "Ni¹ta"
+
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
 msgstr "Jednoliko"
@@ -409,6 +413,3 @@ msgstr "Zaobljeni èetverokut"
 
 #~ msgid "Continue"
 #~ msgstr "Nastavi"
-
-#~ msgid "None"
-#~ msgstr "Ni¹ta"
