--- a/po/el/kpaint.po
+++ b/po/el/kpaint.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Theodore J. Soldatos <theodore@exi.gr>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -306,6 +306,10 @@ msgstr "Ιδιότητες γεμίσματος"
 msgid "Fill Pattern:"
 msgstr "Σχήμα γεμίσματος:"
 
+#: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
+msgid "None"
+msgstr "Κανένα"
+
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
 msgstr "Στέρεο"
@@ -414,9 +418,6 @@ msgstr "Παραλληλόγραμμο"
 
 #~ msgid "Continue"
 #~ msgstr "Συνέχεια"
-
-#~ msgid "None"
-#~ msgstr "Κανένα"
 
 #~ msgid "KPaint: Malformed URL"
 #~ msgstr "KPaint: Λάθος σύνταξη URL"
