--- a/po/es/kghostview.po
+++ b/po/es/kghostview.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -379,6 +379,10 @@ msgstr ""
 #: kghostview.cpp:426
 msgid "Configure interpreter"
 msgstr "Configurar intérprete"
+
+#: kghostview.cpp:444
+msgid "New"
+msgstr "Nuevo"
 
 #: kghostview.cpp:500
 msgid "&Open ..."
@@ -812,9 +816,6 @@ msgstr "Magnificación"
 
 #~ msgid "Didn't recognise file\n"
 #~ msgstr "Imposible reconocer el fichero\n"
-
-#~ msgid "New"
-#~ msgstr "Nuevo"
 
 #~ msgid "&New"
 #~ msgstr "&Nuevo"
