--- a/po/fr/kpaint.po
+++ b/po/fr/kpaint.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kpaint\n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: 1998-01-28 22:55 CET\n"
 "Last-Translator: Serge \"sergio\" Tellène <tells@mygale.org>\n"
 "Language-Team: Français\n"
@@ -304,6 +304,10 @@ msgstr "Propriétés de remplissage"
 msgid "Fill Pattern:"
 msgstr "Motif de remplissage :"
 
+#: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
+msgid "None"
+msgstr "Aucun"
+
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
 msgstr "Plein"
@@ -410,9 +414,6 @@ msgstr "Rectangle"
 
 #~ msgid "Continue"
 #~ msgstr "Continuer"
-
-#~ msgid "None"
-#~ msgstr "Aucun"
 
 #~ msgid "KPaint: Malformed URL"
 #~ msgstr "KPaint: URL incorrecte"
