--- a/po/hu/kghostview.po
+++ b/po/hu/kghostview.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kghostscript VERSION\n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Szâkely Krisztiﬂn <szekelyk@edasz.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
@@ -378,6 +378,10 @@ msgstr ""
 #: kghostview.cpp:426
 msgid "Configure interpreter"
 msgstr "–rtelmez beﬂllçtﬂsa"
+
+#: kghostview.cpp:444
+msgid "New"
+msgstr "ıj"
 
 #: kghostview.cpp:500
 msgid "&Open ..."
@@ -766,9 +770,6 @@ msgstr "Nagyçtﬂs"
 
 #~ msgid "Date :"
 #~ msgstr "Dﬂtum :"
-
-#~ msgid "New"
-#~ msgstr "ıj"
 
 #~ msgid "&New"
 #~ msgstr "&ıj"
