--- a/po/hu/kpaint.po
+++ b/po/hu/kpaint.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kdehelp 0.5.2\n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: 1997-09-21 19:39+MET\n"
 "Last-Translator: Nagy Balazs <julian7@kva.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
@@ -307,6 +307,10 @@ msgstr "Kitöltési tulajdonságok"
 msgid "Fill Pattern:"
 msgstr "Kitöltési minta:"
 
+#: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
+msgid "None"
+msgstr "Nincs"
+
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
 msgstr "Egyszínû"
@@ -415,9 +419,6 @@ msgstr "Téglalap"
 
 #~ msgid "Continue"
 #~ msgstr "Tovább"
-
-#~ msgid "None"
-#~ msgstr "Nincs"
 
 #~ msgid "KPaint: Malformed URL"
 #~ msgstr "KPaint: Hibás URL"
