--- a/po/nl/kpaint.po
+++ b/po/nl/kpaint.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -310,6 +310,10 @@ msgstr "Vulinstellingen"
 msgid "Fill Pattern:"
 msgstr "Vulpatroon"
 
+#: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
+msgid "None"
+msgstr "Geen"
+
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
 msgstr "Egaal"
@@ -418,9 +422,6 @@ msgstr "Rechthoek"
 
 #~ msgid "Continue"
 #~ msgstr "Doorgaan"
-
-#~ msgid "None"
-#~ msgstr "Geen"
 
 #~ msgid "KPaint: Malformed URL"
 #~ msgstr "KPaint: Misvormd URL"
