--- a/po/pl/kpaint.po
+++ b/po/pl/kpaint.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kpaint \n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: 1998-06-24 00:06+0200\n"
 "Last-Translator: Jacek Stolarczyk <jacek@mer.chemia.polsl.gliwice.pl>\n"
 "Content-Type: text/plain; charset=iso-8859-2\n"
@@ -308,6 +308,10 @@ msgstr "W³a¶ciwo¶ci &wype³nienia"
 msgid "Fill Pattern:"
 msgstr "Wzorzec:"
 
+#: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
+msgid "None"
+msgstr "Brak"
+
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
 msgstr "Pe³ny"
@@ -416,9 +420,6 @@ msgstr "Prostok±t"
 
 #~ msgid "Continue"
 #~ msgstr "Dalej"
-
-#~ msgid "None"
-#~ msgstr "Brak"
 
 #~ msgid "KPaint: Malformed URL"
 #~ msgstr "KPaint: URL formularza"
