--- a/po/zh_TW.Big5/kpaint.po
+++ b/po/zh_TW.Big5/kpaint.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1998-10-01 13:38+0200\n"
+"POT-Creation-Date: 1998-10-08 17:03+0200\n"
 "PO-Revision-Date: 1998-04-21 03:23:+0800\n"
 "Last-Translator: Chou Yeh-Jyi <ycchou@ccca.nctu.edu.tw>\n"
 "MIME-Version: 1.0\n"
@@ -302,6 +302,10 @@ msgstr "填充內容"
 msgid "Fill Pattern:"
 msgstr "填充花樣"
 
+#: properties.cpp:76 properties.cpp:130 properties.cpp:293 properties.cpp:353
+msgid "None"
+msgstr "無"
+
 #: properties.cpp:77 properties.cpp:131 properties.cpp:288 properties.cpp:348
 msgid "Solid"
 msgstr "實心"
@@ -410,9 +414,6 @@ msgstr "矩形"
 
 #~ msgid "Continue"
 #~ msgstr "繼續"
-
-#~ msgid "None"
-#~ msgstr "無"
 
 #~ msgid "KPaint: Malformed URL"
 #~ msgstr "KPaint: 不正確的 URL"
