--- a/po/pt_BR/kiconedit.po
+++ b/po/pt_BR/kiconedit.po
@@ -37,14 +37,12 @@ msgstr ""
 "Você deseja salvá-lo?"
 
 #: kiconedit.cpp:367
-#, fuzzy
 msgid "Select All"
 msgstr "Selecionar &tudo"
 
 #: kiconedit.cpp:385
-#, fuzzy
 msgid "New &Window"
-msgstr "Nova Janela"
+msgstr "&Nova Janela"
 
 #: kiconedit.cpp:396
 msgid "Open recent"
@@ -104,7 +102,7 @@ msgstr "&Tons de Cinza"
 
 #: kiconedit.cpp:468
 msgid "&Map to KDE palette"
-msgstr ""
+msgstr "&Mapear para a paleta do KDE"
 
 #: kiconedit.cpp:471
 msgid "&Icon"
@@ -160,7 +158,7 @@ msgstr "&Ferramentas"
 
 #: kiconedit.cpp:492
 msgid "&Configure"
-msgstr ""
+msgstr "&Configurar"
 
 #: kiconedit.cpp:494
 msgid "Toggle &Grid"
@@ -184,12 +182,11 @@ msgstr "&Salvar opções"
 
 #: kiconedit.cpp:563
 msgid "What is ...?"
-msgstr ""
+msgstr "O que é ...?"
 
 #: kiconedit.cpp:572
-#, fuzzy
 msgid "Drag source"
-msgstr "Desenhar círculo"
+msgstr "Arrastar fonte"
 
 #: kiconedit.cpp:577
 msgid "New File"
@@ -288,6 +285,12 @@ msgid ""
 "(Tip: Hold the magnify button down for a few seconds to zoom to a predefined "
 "scale"
 msgstr ""
+"Grade de desenho de ícones\n"
+"\n"
+"A grade é a área onde você desenha os ícones.\n"
+"Você pode ampliar e reduzir usando as lentes da barra de ferramentas.\n"
+"(Dica: Mantenha o botão da lente pressionado por alguns segundos\n"
+"para ampliar à uma escala predefinida."
 
 #: kiconedit.cpp:784
 msgid ""
@@ -295,6 +298,9 @@ msgid ""
 "\n"
 "This is a visual represantation of the current cursor position"
 msgstr ""
+"Réguas\n"
+"\n"
+"É uma representação visual da posição corrente do cursor"
 
 #: kiconedit.cpp:788
 msgid ""
@@ -309,6 +315,15 @@ msgid ""
 "\t- Number of colors\n"
 "\t- Application messages"
 msgstr ""
+"Barra de status\n"
+"\n"
+"A barra de status fornece informaçõe sobre o ícone corrente:\n"
+"\n"
+"\t- posição do cursor\n"
+"\t- tamanho\n"
+"\t- fator de ampliação\n"
+"\t- número de cores\n"
+"\t- mensagens da aplicação"
 
 #: kiconedit.cpp:797
 msgid ""
@@ -316,6 +331,9 @@ msgid ""
 "\n"
 "This is a 1:1 preview of the current icon"
 msgstr ""
+"Prever\n"
+"\n"
+"Esta é uma previsão 1:1 do ícone corrente"
 
 #: kiconedit.cpp:800
 msgid ""
@@ -323,6 +341,9 @@ msgid ""
 "\n"
 "Here you can select colors from the KDE Icon Palette."
 msgstr ""
+"Cores do sistema\n"
+"\n"
+"Aqui você pode selecionar cores da Paleta de Cores do KDE."
 
 #: kiconedit.cpp:803
 msgid ""
@@ -331,6 +352,10 @@ msgid ""
 "Here you can build a palette of custom colors.\n"
 "Just double-click on a box to edit the color"
 msgstr ""
+"Cores especiais\n"
+"\n"
+"Aqui você pode construir uma paleta de cores especiais.\n"
+"Clique duas vezes em uma caixa para editar a cor"
 
 #: kiconedit.cpp:809
 msgid ""
@@ -338,6 +363,9 @@ msgid ""
 "\n"
 "Create a new icon either from a template or by specifying the size"
 msgstr ""
+"Novo\n"
+"\n"
+"Cria um novo ícone a partir de um modelo ou especificando o tamanho"
 
 #: kiconedit.cpp:812
 msgid ""
@@ -345,6 +373,9 @@ msgid ""
 "\n"
 "Open an existing icon"
 msgstr ""
+"Abrir\n"
+"\n"
+"Abre um ícone preexistente"
 
 #: kiconedit.cpp:815
 msgid ""
@@ -352,6 +383,9 @@ msgid ""
 "\n"
 "Save the current icon"
 msgstr ""
+"Salvar\n"
+"\n"
+"Salva o ícone corrente"
 
 #: kiconedit.cpp:818
 msgid ""
@@ -360,6 +394,10 @@ msgid ""
 "Opens a print dialog to let you print the current icon. (Doesn't realy work "
 "as expected"
 msgstr ""
+"Imprimir\n"
+"\n"
+"Abre uma janela que lhe permite imprimir o ícone corrente. (Não funciona"
+"exatamente como o esperado)"
 
 #: kiconedit.cpp:822
 msgid ""
@@ -369,6 +407,11 @@ msgid ""
 "\n"
 "(Tip: You can make both rectangular and circular selections)"
 msgstr ""
+"Cortar\n"
+"\n"
+"Corta fora a seleção corrente do ícone\n"
+"\n"
+"(Nota: você pode fazer seleções retangulares e singulares)"
 
 #: kiconedit.cpp:826
 msgid ""
@@ -378,6 +421,11 @@ msgid ""
 "\n"
 "(Tip: You can make both rectangular and circular selections)"
 msgstr ""
+"Copiar\n"
+"\n"
+"Copiar a seleção corrente\n"
+"\n"
+"(Nota: você pode fazer seleções retangulares e singulares)"
 
 #: kiconedit.cpp:830
 msgid ""
@@ -391,6 +439,15 @@ msgid ""
 "(Tip: Select \"Paste transparent pixels\" in the configuration dialog if you "
 "also want to paste transparent)"
 msgstr ""
+"Colar\n"
+"\n"
+"Colar o conteúdo da área de transferência para o ícone.\n"
+"\n"
+"Se o conteúdo é maior que o ícone atual você pode colá-lo para em uma "
+"nova janela.\n"
+"\n"
+"(Nota: Selecione \"Colar pixels transparentes\" na janela de configuração"
+" se você também quer colar transparente)"
 
 #: kiconedit.cpp:837
 msgid ""
@@ -400,6 +457,11 @@ msgid ""
 "\n"
 "(Tip: You can make both rectangular and circular selections)"
 msgstr ""
+"Selecionar\n"
+"\n"
+"Selecionar uma seção do ícone usando o mouse.\n"
+"\n"
+"(Nota: Você pode fazers seleções retangulares e também circulares)"
 
 #: kiconedit.cpp:841
 msgid ""
@@ -407,6 +469,9 @@ msgid ""
 "\n"
 "Smoothly resizes the icon while trying to preserve the contents"
 msgstr ""
+"Redimensionar\n"
+"\n"
+"Redimensiona suavemente o ícone, tentando preservar o conteúdo"
 
 #: kiconedit.cpp:844
 msgid ""
@@ -415,6 +480,10 @@ msgid ""
 "Gray scale the current icon.\n"
 "(Warning: The result is likely to contain colors not in the icon palette"
 msgstr ""
+"Escala de cinzas\n"
+"\n"
+"Refazer o ícone corrente em escala de cinzas.\n"
+"(Aviso: o resultado terá cores não pertencentes à paleta de ícones)"
 
 #: kiconedit.cpp:848
 msgid ""
@@ -424,6 +493,13 @@ msgid ""
 "\n"
 "(Tip: Hold the button down for a few seconds to zoom to a predefined scale"
 msgstr ""
+"Reduzir\n"
+"\n"
+"Reduzir a ampliação em um grau.\n"
+"\n"
+"(Dica: Mantenha o botão da lente pressionado por alguns segundos\n"
+"para ampliar à uma escala predefinida."
+"(: Hold the button down for a few seconds to zoom to a predefined scale"
 
 #: kiconedit.cpp:852
 msgid ""
@@ -433,6 +509,12 @@ msgid ""
 "\n"
 "(Tip: Hold the button down for a few seconds to zoom to a predefined scale"
 msgstr ""
+"Ampliar\n"
+"\n"
+"Amplia em um grau.\n"
+"\n"
+"(Dica: Mantenha o botão da lente pressionado por alguns segundos\n"
+"para ampliar à uma escala predefinida."
 
 #: kiconedit.cpp:856
 msgid ""
@@ -440,6 +522,9 @@ msgid ""
 "\n"
 "Toggles the grid in the icon edit grid on/off"
 msgstr ""
+"Comutar grade\n"
+"\n"
+"Comuta (liga/desliga) a grade de edição de ícones"
 
 #: kiconedit.cpp:859
 msgid ""
@@ -447,6 +532,9 @@ msgid ""
 "\n"
 "Opens a new Icon Editor window."
 msgstr ""
+"Nova janela\n"
+"\n"
+"Abre uma nova janela do Editor de Ícones."
 
 #: kiconedit.cpp:862
 msgid ""
@@ -454,6 +542,9 @@ msgid ""
 "\n"
 "Well since you're reading this I guess you found out ;-)"
 msgstr ""
+"O que é...?\n"
+"\n"
+"Se você está lendo isso, suponho que você já descobriu ;-)"
 
 #: kiconedit.cpp:865
 msgid ""
@@ -465,6 +556,14 @@ msgid ""
 "(Note: The drag source uses the QT XDND protocol which is not yet standard "
 "in KDE)"
 msgstr ""
+"Arrastar fontes\n"
+"\n"
+"A partir deste botão você pode arrastar uma cópia do ícone corrente e "
+"soltá-lo numa janela habilitada a receber o ícone, como por exemplo "
+"outro Editor de Ícones.\n"
+"\n"
+"(Nota: A fonte de arrasto usa o protocolo QT XDND que ainda não é padrão "
+"no KDE)"
 
 #: kiconedit.cpp:873
 msgid ""
@@ -472,6 +571,9 @@ msgid ""
 "\n"
 "Draw non-linear lines"
 msgstr ""
+"Mão livre\n"
+"\n"
+"Desenhar linhas não-lineares"
 
 #: kiconedit.cpp:876
 msgid ""
@@ -479,54 +581,69 @@ msgid ""
 "\n"
 "Fill adjoining pixels with the same color with the current color"
 msgstr ""
+"Enchente\n"
+"\n"
+"Encher um espaço fechado com a cor corrente"
 
 #: kiconedit.cpp:879
-#, fuzzy
 msgid ""
 "Rectangle\n"
 "\n"
 "Draw a rectangle"
-msgstr "Desenhar retângulo"
+msgstr ""
+"Retângulo\n"
+"\n"
+"Desenha um retângulo"
 
 #: kiconedit.cpp:882
-#, fuzzy
 msgid ""
 "Filled rectangle\n"
 "\n"
 "Draw a filled rectangle"
-msgstr "Desenhar retângulo cheio"
+msgstr ""
+"Retângulo preenchido\n"
+"\n"
+"Desenha um retângulo preenchido"
 
 #: kiconedit.cpp:885
-#, fuzzy
 msgid ""
 "Circle\n"
 "\n"
 "Draw a circle"
-msgstr "Desenhar círculo"
+msgstr ""
+"Círculo\n"
+"\n"
+"Desenha um círculo"
 
 #: kiconedit.cpp:888
-#, fuzzy
 msgid ""
 "Filled circle\n"
 "\n"
 "Draw a filled circle"
-msgstr "Desenhar círculo cheio"
+msgstr ""
+"Círculo preenchido\n"
+"\n"
+"Desenha um círculo preenchido"
 
 #: kiconedit.cpp:891
-#, fuzzy
 msgid ""
 "Ellipse\n"
 "\n"
 "Draw an ellipse"
-msgstr "Desenhar elipse"
+msgstr ""
+"Elipse\n"
+"\n"
+"Desenha uma elipse"
 
 #: kiconedit.cpp:894
-#, fuzzy
 msgid ""
 "Filled ellipse\n"
 "\n"
 "Draw a filled ellipse"
-msgstr "Desenhar elipse cheia"
+msgstr ""
+"Elipse preenchida\n"
+"\n"
+"Desenha uma elipse preenchida"
 
 #: kiconedit.cpp:897
 msgid ""
@@ -534,6 +651,9 @@ msgid ""
 "\n"
 "Draw a straight line vertically, horizontically or in 45 dgr. angles"
 msgstr ""
+"Linha\n"
+"\n"
+"Desenha uma linha reta vertical ou horizontal ou diagonal"
 
 #: kiconedit.cpp:900
 msgid ""
@@ -541,6 +661,9 @@ msgid ""
 "\n"
 "Draw scattered pixels in the current color"
 msgstr ""
+"Spray\n"
+"\n"
+"Desenha pixels espalhados na cor corrente"
 
 #: kiconedit.cpp:903
 msgid ""
@@ -548,6 +671,9 @@ msgid ""
 "\n"
 "The color of the pixel clicked on will be the current drawcolor"
 msgstr ""
+"Procurar\n"
+"\n"
+"A cor do pixel clicado passará a ser a cor corrente de desenho"
 
 #: kiconedit.cpp:906
 msgid ""
@@ -558,6 +684,12 @@ msgid ""
 "(Tip: If you want to draw transparent with a different tool then first click "
 "on \"Erase\" then on the tool you want to use)"
 msgstr ""
+"Apagar\n"
+"\n"
+"Apagar pixels. Configurar os pixels para serem transparentes\n"
+"\n"
+"(Dica: Se você quer desenhar transparente com uma ferramenta diferente," 
+"primeiro clique em \"Apagar\" e então na ferramenta que você quer usar)"
 
 #: kicongrid.cpp:651
 msgid "There was an error loading a blank image.\n"
@@ -757,132 +889,124 @@ msgid "Colors: %u"
 msgstr "Cores: %u"
 
 #: kiconconfig.cpp:29
-#, fuzzy
 msgid "Template"
-msgstr "Modelos:"
+msgstr "Modelo"
 
 #: kiconconfig.cpp:30
 msgid "Description:"
-msgstr ""
+msgstr "Descrição:"
 
 #: kiconconfig.cpp:32
 msgid "Path:"
-msgstr ""
+msgstr "Caminho:"
 
 #: kiconconfig.cpp:62
 msgid "&Browse..."
-msgstr ""
+msgstr "&Navegar..."
 
 #: kiconconfig.cpp:135
 msgid "&Add"
-msgstr ""
+msgstr "&Adicionar"
 
 #: kiconconfig.cpp:247
 msgid "Color or pixmap"
-msgstr ""
+msgstr "Cor ou mapa de pixels"
 
 #: kiconconfig.cpp:255
 msgid "Colored background"
-msgstr ""
+msgstr "Fundo colorido"
 
 #: kiconconfig.cpp:260
 msgid "Pixmap background"
-msgstr ""
+msgstr "Fundo do mapa de pixels"
 
 #: kiconconfig.cpp:275
 msgid "&Color..."
-msgstr ""
+msgstr "&Cor..."
 
 #: kiconconfig.cpp:278
-#, fuzzy
 msgid "&Pixmap..."
-msgstr "&Imprimir"
+msgstr "&Mapa de pixels..."
 
 #: kiconconfig.cpp:286
 msgid "&Built-in"
-msgstr ""
+msgstr "&Embutido"
 
 #: kiconconfig.cpp:290
 msgid "Example"
-msgstr ""
+msgstr "Exemplo"
 
 #: kiconconfig.cpp:398
-#, fuzzy
 msgid "Main Toolbar"
-msgstr "Mini pasta"
+msgstr "Barra de ferramentas principal"
 
 #: kiconconfig.cpp:401
-#, fuzzy
 msgid "Drawing tools"
-msgstr "Alternar ferramentas de &desenho"
+msgstr "Ferramentas de desenho"
 
 #: kiconconfig.cpp:405
 msgid ""
 "Note: Other settings of the toolbars can be reached\n"
 "from the toolbar \"handle\" or from the \"Options\" menu"
 msgstr ""
+"Nota: Outras configurações das barras de ferramentas podem ser acessadas\n"
+"da barra de ferramentas \"handle\" ou do menu \"Opções\""
 
 #: kiconconfig.cpp:424 kiconconfig.cpp:437
 msgid "Show Icon"
-msgstr ""
+msgstr "Mostrar Ícone"
 
 #: kiconconfig.cpp:429 kiconconfig.cpp:442
 msgid "Show Icon and Text"
-msgstr ""
+msgstr "Mostrar Ícone e texto"
 
 #: kiconconfig.cpp:433 kiconconfig.cpp:446
 msgid "Show Text"
-msgstr ""
+msgstr "Mostrar texto"
 
 #: kiconconfig.cpp:504
-#, fuzzy
 msgid "Paste mode"
-msgstr "Colar"
+msgstr "Modo colar"
 
 #: kiconconfig.cpp:506
-#, fuzzy
 msgid "Paste transparent pixels"
-msgstr "Apagar (transparente)"
+msgstr "Colar pixels transparentes"
 
 #: kiconconfig.cpp:510
 msgid "Show rulers"
-msgstr ""
+msgstr "Mostrar réguas"
 
 #: kiconconfig.cpp:592
 msgid "Keys"
-msgstr ""
+msgstr "Teclas"
 
 #: kiconconfig.cpp:597
 msgid "Configure keys"
-msgstr ""
+msgstr "Configurar teclas"
 
 #: kiconconfig.cpp:604
-#, fuzzy
 msgid "Templates"
-msgstr "Modelos:"
+msgstr "Modelos"
 
 #: kiconconfig.cpp:609
-#, fuzzy
 msgid "Configure Icon templates"
-msgstr "Criar de um modelo"
+msgstr "Configurar modelos de ícone"
 
 #: kiconconfig.cpp:621
 msgid "Configure background"
-msgstr ""
+msgstr "Configurar fundo"
 
 #: kiconconfig.cpp:629
-#, fuzzy
 msgid "Toolbars"
-msgstr "&Ferramentas"
+msgstr "Barras de ferramentas"
 
 #: kiconconfig.cpp:641
 msgid "Icon grid"
-msgstr ""
+msgstr "Grade de Ícones"
 
 #~ msgid "Warning"
 #~ msgstr "Atenção"
 
-#, fuzzy
 #~ msgid "New &window"
 #~ msgstr "&Nova janela"
 
